# sensor-fault-detection

./: .env  .gitignore  README.md  commands.md  demo_exception.py  demo_ingestion.py  demo_logging.py  demo_mongo.py  demo_transformation.py  demo_validation.py  generate_schema.py  interview.md  notes.md  push_data_to_mongo.py  pyproject.toml  template.py
data_schema/: schema.yaml
src/sensor_fault_detection/: __init__.py
src/sensor_fault_detection/components/: data_ingestion.py  data_transformation.py  data_validation.py
src/sensor_fault_detection/constants/: __init__.py
src/sensor_fault_detection/entity/: artifact_entity.py  config_entity.py
src/sensor_fault_detection/exception/: __init__.py
src/sensor_fault_detection/logger/: __init__.py
src/sensor_fault_detection/utils/: main_utils.py
