[project]
name = "sensor-fault-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bhanu prakash", email = "sigebhanuprakash171@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.6.17",
    "pandas>=3.0.3",
    "pymongo[srv]>=4.17.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
